--- a/index.html
+++ b/index.html
@@ -7,7 +7,18 @@
     <link rel="stylesheet" href="./css/UI.css">
 </head>
 <body>
-    
+    <canvas class="canva" width="500" height="500"></canvas>
+
+
+
+
+
+
+
+
+
+
+
 
 
 
