--- a/index.html
+++ b/index.html
@@ -8,21 +8,13 @@
 </head>
 <body>
     <canvas class="canva" width="500" height="500"></canvas>
+  <div class="buttons">
+    //
+    <button id="startBtn">Start Game</button>
+    <button id="stopBtn">Stop Game</button>
+  </div>
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-    <script src="./js/App.js"></script>
+<script src="./js/App.js"></script>
 </body>
 </html>
